--- a/notebooks/data_sampling.ipynb
+++ b/notebooks/data_sampling.ipynb
@@ -16,39 +16,14 @@
     "import s3fs\n",
     "import boto3\n",
     "from solardatatools.clear_day_detection import filter_for_sparsity\n",
+    "from solardataretrieval import utilities\n",
     "from os.path import expanduser\n",
     "home = expanduser('~')\n",
     "with open(home + '/.aws/credentials') as f:\n",
     "        lns = f.readlines()\n",
     "        key = lns[3].split(' = ')[1].strip('\\n')\n",
     "        secret = lns[4].split(' = ')[1].strip('\\n')\n",
-    "s3 = boto3.client('s3', aws_access_key_id=key,aws_secret_access_key=secret)\n",
-    "def AWS_upload(data_to_upload_df,number_of_sites, number_of_days, kind):\n",
-    "    #upload to aws\n",
-    "    bytes_to_write = data_to_upload_df.to_csv(None).encode()\n",
-    "    fs = s3fs.S3FileSystem(key=key, secret=secret)\n",
-    "    #path needs to change!\n",
-    "    file_path = 's3://pv.insight.misc/data_samples/s{}_d{}_{}.csv'.format(number_of_sites,number_of_days, kind)\n",
-    "    with fs.open(file_path, 'wb') as f:\n",
-    "        f.write(bytes_to_write)\n",
-    "        \n",
-    "def progress(count, total, status='', bar_length=60):\n",
-    "    \"\"\"\n",
-    "    Python command line progress bar in less than 10 lines of code. · GitHub\n",
-    "    https://gist.github.com/vladignatyev/06860ec2040cb497f0f3\n",
-    "    :param count: the current count, int\n",
-    "    :param total: to total count, int\n",
-    "    :param status: a message to display\n",
-    "    :return:\n",
-    "    \"\"\"\n",
-    "    bar_len = bar_length\n",
-    "    filled_len = int(round(bar_len * count / float(total)))\n",
-    "\n",
-    "    percents = round(100.0 * count / float(total), 1)\n",
-    "    bar = '=' * filled_len + '-' * (bar_len - filled_len)\n",
-    "\n",
-    "    sys.stdout.write('[%s] %s%s ...%s\\r' % (bar, percents, '%', status))\n",
-    "    sys.stdout.flush()"
+    "s3 = boto3.client('s3', aws_access_key_id=key,aws_secret_access_key=secret)\n"
    ]
   },
   {
@@ -59,26 +34,25 @@
    "source": [
     "#set variables here: \n",
     "#choose how many sites you want in your data pipeline\n",
-    "number_of_sites = 50\n",
-    "number_of_days = 50\n",
+    "number_of_sites = 10\n",
+    "number_of_days = 10\n",
     "quantile_percent = 0.95"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#base = 's3://pv.insight.sunpower.preprocessed'\n",
-    "#sunpower_summary_file = pd.read_csv(base + 'summary_file.csv')\n",
+    "#download summary file from preprocessing\n",
     "s3.download_file('pv.insight.sunpower.preprocessed','summary_file.csv','summary_file.csv')\n",
     "sunpower_summary_file = pd.read_csv('summary_file.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -147,19 +121,19 @@
     "        power_signals_selected_days_all = np.concatenate([power_signals_selected_days_all, power_signals_selected_days], axis=1)\n",
     "    df_meta_data = df_meta_data.append(sunpower_summary_file.iloc[data_index,:])\n",
     "    df_meta_data.loc[data_index, 'days_selected'] = str(list_of_selected_dates)\n",
-    "    progress(counter, number_of_days, status='', bar_length=60)\n",
+    "    utilities.progress(counter, number_of_days, status='', bar_length=60)\n",
     "    counter = counter + 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_data_input = pd.DataFrame(data=power_signals_selected_days_all[:])\n",
-    "upload_quantile_values = AWS_upload(df_meta_data,number_of_sites, number_of_days, \"metadata\")\n",
-    "upload_data = AWS_upload(df_data_input,number_of_sites, number_of_days, \"data_input\")\n"
+    "upload_quantile_values = utilities.AWS_upload(df_meta_data,number_of_sites, number_of_days, \"metadata\")\n",
+    "upload_data = utilities.AWS_upload(df_data_input,number_of_sites, number_of_days, \"data_input\")\n"
    ]
   },
   {
