fix site filter

--- a/notebooks/data_sampling.ipynb
+++ b/notebooks/data_sampling.ipynb
@@ -43,24 +43,399 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0        True\n",
+       " 1        True\n",
+       " 2        True\n",
+       " 3        True\n",
+       " 4        True\n",
+       " 5        True\n",
+       " 6        True\n",
+       " 7        True\n",
+       " 8        True\n",
+       " 9       False\n",
+       " 10       True\n",
+       " 11       True\n",
+       " 12       True\n",
+       " 13       True\n",
+       " 14       True\n",
+       " 15       True\n",
+       " 16       True\n",
+       " 17       True\n",
+       " 18       True\n",
+       " 19       True\n",
+       " 20       True\n",
+       " 21       True\n",
+       " 22       True\n",
+       " 23       True\n",
+       " 24       True\n",
+       " 25       True\n",
+       " 26       True\n",
+       " 27       True\n",
+       " 28       True\n",
+       " 29       True\n",
+       "         ...  \n",
+       " 1913    False\n",
+       " 1914    False\n",
+       " 1915    False\n",
+       " 1916    False\n",
+       " 1917    False\n",
+       " 1918    False\n",
+       " 1919    False\n",
+       " 1920     True\n",
+       " 1921    False\n",
+       " 1922    False\n",
+       " 1923     True\n",
+       " 1924    False\n",
+       " 1925    False\n",
+       " 1926     True\n",
+       " 1927     True\n",
+       " 1928     True\n",
+       " 1929     True\n",
+       " 1930     True\n",
+       " 1931     True\n",
+       " 1932     True\n",
+       " 1933     True\n",
+       " 1934     True\n",
+       " 1935     True\n",
+       " 1936     True\n",
+       " 1937     True\n",
+       " 1938     True\n",
+       " 1939     True\n",
+       " 1940     True\n",
+       " 1941     True\n",
+       " 1942     True\n",
+       " Name: overall_sparsity, Length: 1943, dtype: bool]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.add_site_filter(y.summary_df['overall_sparsity'] < sparsity_th)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0        True\n",
+       " 1        True\n",
+       " 2        True\n",
+       " 3        True\n",
+       " 4        True\n",
+       " 5        True\n",
+       " 6        True\n",
+       " 7        True\n",
+       " 8        True\n",
+       " 9       False\n",
+       " 10       True\n",
+       " 11       True\n",
+       " 12       True\n",
+       " 13       True\n",
+       " 14       True\n",
+       " 15       True\n",
+       " 16       True\n",
+       " 17       True\n",
+       " 18       True\n",
+       " 19       True\n",
+       " 20       True\n",
+       " 21       True\n",
+       " 22       True\n",
+       " 23       True\n",
+       " 24       True\n",
+       " 25       True\n",
+       " 26       True\n",
+       " 27       True\n",
+       " 28       True\n",
+       " 29       True\n",
+       "         ...  \n",
+       " 1913    False\n",
+       " 1914    False\n",
+       " 1915    False\n",
+       " 1916    False\n",
+       " 1917    False\n",
+       " 1918    False\n",
+       " 1919    False\n",
+       " 1920     True\n",
+       " 1921    False\n",
+       " 1922    False\n",
+       " 1923     True\n",
+       " 1924    False\n",
+       " 1925    False\n",
+       " 1926     True\n",
+       " 1927     True\n",
+       " 1928     True\n",
+       " 1929     True\n",
+       " 1930     True\n",
+       " 1931     True\n",
+       " 1932     True\n",
+       " 1933     True\n",
+       " 1934     True\n",
+       " 1935     True\n",
+       " 1936     True\n",
+       " 1937     True\n",
+       " 1938     True\n",
+       " 1939     True\n",
+       " 1940     True\n",
+       " 1941     True\n",
+       " 1942     True\n",
+       " Name: overall_sparsity, Length: 1943, dtype: bool, 0        True\n",
+       " 1        True\n",
+       " 2        True\n",
+       " 3        True\n",
+       " 4        True\n",
+       " 5        True\n",
+       " 6        True\n",
+       " 7        True\n",
+       " 8        True\n",
+       " 9       False\n",
+       " 10       True\n",
+       " 11       True\n",
+       " 12       True\n",
+       " 13       True\n",
+       " 14       True\n",
+       " 15       True\n",
+       " 16       True\n",
+       " 17       True\n",
+       " 18       True\n",
+       " 19       True\n",
+       " 20       True\n",
+       " 21       True\n",
+       " 22       True\n",
+       " 23       True\n",
+       " 24       True\n",
+       " 25       True\n",
+       " 26       True\n",
+       " 27       True\n",
+       " 28       True\n",
+       " 29       True\n",
+       "         ...  \n",
+       " 1913    False\n",
+       " 1914    False\n",
+       " 1915    False\n",
+       " 1916    False\n",
+       " 1917    False\n",
+       " 1918    False\n",
+       " 1919    False\n",
+       " 1920     True\n",
+       " 1921    False\n",
+       " 1922    False\n",
+       " 1923     True\n",
+       " 1924    False\n",
+       " 1925    False\n",
+       " 1926     True\n",
+       " 1927     True\n",
+       " 1928     True\n",
+       " 1929     True\n",
+       " 1930     True\n",
+       " 1931     True\n",
+       " 1932     True\n",
+       " 1933     True\n",
+       " 1934     True\n",
+       " 1935     True\n",
+       " 1936     True\n",
+       " 1937     True\n",
+       " 1938     True\n",
+       " 1939     True\n",
+       " 1940     True\n",
+       " 1941     True\n",
+       " 1942     True\n",
+       " Name: overall_quality, Length: 1943, dtype: bool]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.add_site_filter(y.summary_df['overall_quality'] > quality_th)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "data_retrieval() missing 3 required positional arguments: 'number_of_sites', 'number_of_days', and 'quantile_percent'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-4f91529db0f6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0my\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata_upload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnumber_of_sites\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnumber_of_days\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/Documents/github/solar-data-retrieval/solardataretrieval/retrieval.py\u001b[0m in \u001b[0;36mdata_upload\u001b[0;34m(self, number_of_sites, number_of_days)\u001b[0m\n\u001b[1;32m     97\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     98\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mdata_upload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnumber_of_sites\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnumber_of_days\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 99\u001b[0;31m         \u001b[0mdf_data_input\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf_meta_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata_retrieval\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    100\u001b[0m         \u001b[0mupload_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mutilities\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAWS_upload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_data_input\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnumber_of_sites\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnumber_of_days\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"data_input\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    101\u001b[0m         \u001b[0mupload_quantile_values\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mutilities\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAWS_upload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_meta_data\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnumber_of_sites\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnumber_of_days\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"metadata\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: data_retrieval() missing 3 required positional arguments: 'number_of_sites', 'number_of_days', and 'quantile_percent'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[============================================================] 100.0% ...\r"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(       0    1    2    3    4    5    6    7    8    9\n",
+       " 0    0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 1    0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 2    0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 3    0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 4    0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 5    0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 6    0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 7    0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 8    0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 9    0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 10   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 11   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 12   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 13   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 14   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 15   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 16   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 17   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 18   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 19   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 20   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 21   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 22   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 23   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 24   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 25   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 26   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 27   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 28   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 29   0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " ..   ...  ...  ...  ...  ...  ...  ...  ...  ...  ...\n",
+       " 258  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 259  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 260  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 261  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 262  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 263  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 264  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 265  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 266  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 267  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 268  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 269  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 270  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 271  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 272  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 273  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 274  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 275  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 276  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 277  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 278  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 279  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 280  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 281  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 282  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 283  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 284  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 285  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 286  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 287  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " \n",
+       " [288 rows x 10 columns],\n",
+       "                   site_ID                         sensor_ID start_timestamp  \\\n",
+       " 206   ZT161685000441C0141  414051616004231_AC_Module_Type_C          8/8/16   \n",
+       " 1596         TABB01125140            2002041544_SPR-3000m-U        12/31/13   \n",
+       " 311          TABF01017766            2002098497_SPR-7000m-U        12/31/13   \n",
+       " 1124         TADKC1018154    1913039440_SMA-SB-3800TL-US-22          6/2/15   \n",
+       " 960   ZT163485000441C0937  414051644007646_AC_Module_Type_C         5/11/17   \n",
+       " \n",
+       "      end_timestamp duration_days time_sample  quantile_95  overall_sparsity  \\\n",
+       " 206        6/20/19          1044         288     0.213500          0.178161   \n",
+       " 1596       4/10/15           463         288     2.178300          0.000000   \n",
+       " 311        5/21/19          1965         288     4.919500          0.003562   \n",
+       " 1124       5/21/19          1447         288     2.633925          0.008293   \n",
+       " 960        6/20/19           768         288     0.217000          0.167969   \n",
+       " \n",
+       "       overall_quality days_selected  \n",
+       " 206          0.799808     [421 695]  \n",
+       " 1596         0.997840     [443  23]  \n",
+       " 311          0.981679     [634 917]  \n",
+       " 1124         0.973048     [388 126]  \n",
+       " 960          0.791667     [498 284]  ,\n",
+       "       overall_sparsity  overall_quality\n",
+       " 0                 True             True\n",
+       " 1                 True             True\n",
+       " 2                 True             True\n",
+       " 3                 True             True\n",
+       " 4                 True             True\n",
+       " 5                 True             True\n",
+       " 6                 True             True\n",
+       " 7                 True             True\n",
+       " 8                 True             True\n",
+       " 9                False            False\n",
+       " 10                True             True\n",
+       " 11                True             True\n",
+       " 12                True             True\n",
+       " 13                True             True\n",
+       " 14                True             True\n",
+       " 15                True             True\n",
+       " 16                True             True\n",
+       " 17                True             True\n",
+       " 18                True             True\n",
+       " 19                True             True\n",
+       " 20                True             True\n",
+       " 21                True             True\n",
+       " 22                True             True\n",
+       " 23                True             True\n",
+       " 24                True             True\n",
+       " 25                True             True\n",
+       " 26                True             True\n",
+       " 27                True             True\n",
+       " 28                True             True\n",
+       " 29                True             True\n",
+       " ...                ...              ...\n",
+       " 1913             False            False\n",
+       " 1914             False            False\n",
+       " 1915             False            False\n",
+       " 1916             False            False\n",
+       " 1917             False            False\n",
+       " 1918             False            False\n",
+       " 1919             False            False\n",
+       " 1920              True             True\n",
+       " 1921             False            False\n",
+       " 1922             False            False\n",
+       " 1923              True             True\n",
+       " 1924             False            False\n",
+       " 1925             False            False\n",
+       " 1926              True             True\n",
+       " 1927              True             True\n",
+       " 1928              True             True\n",
+       " 1929              True             True\n",
+       " 1930              True             True\n",
+       " 1931              True             True\n",
+       " 1932              True             True\n",
+       " 1933              True             True\n",
+       " 1934              True             True\n",
+       " 1935              True             True\n",
+       " 1936              True             True\n",
+       " 1937              True             True\n",
+       " 1938              True             True\n",
+       " 1939              True             True\n",
+       " 1940              True             True\n",
+       " 1941              True             True\n",
+       " 1942              True             True\n",
+       " \n",
+       " [1943 rows x 2 columns])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "y.data_upload(number_of_sites, number_of_days)"
+    "y.data_retrieval(number_of_sites, number_of_days, quantile_percent)"
    ]
   },
   {
